src/objects/Grant__c.object
<CustomObject>
    <description>LPAM</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Discounted</fullName>
                </value>
                <value>
                    <fullName>Forgivable</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grant_Name__c</fullName>
        <label>Grant Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Project__c</fullName>
        <label>Loan Project</label>
        <referenceTo>Loan_Project__c</referenceTo>
        <relationshipLabel>Grants</relationshipLabel>
        <relationshipName>Grants</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Revocable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Revocable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Terms__c</fullName>
        <label>Terms</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Grant</label>
    <nameField>
        <displayFormat>Grant-{00000}</displayFormat>
        <label>GrantID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>